--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,7 @@ body.blue_short #content_main_inner { padding-top:100px; }
 #content_top div.image        { position:absolute; top:87px; left:20px; width:260px; height:190px; border:1px solid #fff; }
 #content_top h1               { font-size:20px; line-height:26px; font-weight:normal; padding:0 300px 14px 0; margin:0 0 15px 0; border-bottom:1px solid #fff; text-transform:uppercase; letter-spacing:0.05em; }
 #content_top p,
-#content_top .content         { font-size:12pt; line-height:23pt; font-weight:100; }
+#content_top .content         { font-size:12px; line-height:23px; font-weight:100; }
 #content_top .program         { font-size:13px; line-height:16px;}
 #content_top_short            { width:100%; height:170px; }
 #content_main                 { width:945px; margin:0 auto; }
