--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -114,8 +114,6 @@ input.small                   { font-size:11pt; width:207px; height:33px; paddin
 input.large                   { font-size:11pt; width:449px; height:33px; padding:0 4px; margin-bottom:3px; border:none; background:url(../images/form_input_large.png); }
 
 /* Buttons */
-a#add_profile,
-div.button_add_account        { width:145px; height:35px; background:url(../images/button_add_account.png); }
 a.button_continue,
 div.button_continue           { display:block; width:94px; height:35px; background:url(../images/button_continue.png); }
 div.button_browse             { width:63px; height:33px; background:url(../images/button_browse.png); }
@@ -134,6 +132,12 @@ div.button_download_scholarship_app { cursor:pointer; width:136px; height:122px;
 div.reg_funnel     { position:relative; width:945px; height:292px; }
 .button_group      { position:absolute; top:20px; left:0px; display:block; float:left; width:449px; height:252px; background:url('/resources/images/reg_funnel_button_group.png') no-repeat; }
 .button_individual { position:absolute; top:20px; right:0px; display:block; float:right; width:449px; height:252px; background:url('/resources/images/reg_funnel_button_individual.png') no-repeat; }
+a.button_edit    { display:block; cursor:pointer; width:31px; height:31px; background:url('/resources/images/button_edit.png') 7px 5px no-repeat; }
+a.button_edit:hover    { background:url('/resources/images/button_edit_over.png');}
+a.button_add_profile   { display:block; text-decoration:none; cursor:pointer; font-weight:bold; font-size:14px; color:#0fa62b; padding-right:34px; background:url('/resources/images/button_add.png') right center no-repeat; }
+a.button_add_profile:hover    { background:url('/resources/images/button_add_over.png') right center no-repeat;}
+a.button_remove    { display:block; cursor:pointer; width:31px; height:31px; background:url('/resources/images/button_remove.png') 4px 4px no-repeat; }
+a.button_remove:hover    { background:url('/resources/images/button_remove_over.png');}
 
 /* Color bar backgrounds */
 body.blue_short               { background:url(../images/color_bar_blue_short.png) center 210px repeat-x; }
@@ -199,6 +203,7 @@ li.current div.orange_tabs div      { background-position:-295px -33px; }
 
 /* Breadcrumbs */
 div#breadcrumb                { width:944px; height:25px; background:url(../images/breadcrumb_bg.png); }
+body.blue_short div#breadcrumb { position:relative; top:100px; }
 div#breadcrumb div            { position:relative; float:left; height:23px; font-size:11px; line-height:22px; padding:0 5px 0 9px; margin:0 5px 0 2px; cursor:pointer; background:url(../images/sprite.png) -300px 0; }
 div#breadcrumb div div        { position:absolute; float:none; top:0; right:-4px; width:4px; line-height:0; padding:0; margin:0; height:23px; background-position:-794px 0; overflow:hidden; }
 div#breadcrumb .parent        { color:#d2d2d2; }
@@ -273,9 +278,9 @@ div#cart_container           { position:relative; top:0px; border-top:2px solid 
 td#company_info { padding:10px; 0px; 10px; 10px; }
 tbody#billing_totals .program_title { padding:15px 0px 10px 10px; }
 
-.auth-text { position:absolute;right:0px;top:10px;font-size:13px;line-height:18px;text-align:right; }
-.auth-text a { color:#121212; text-decoration:none; }
-.auth-text a:hover { color: #F00; }
+.auth-text { position:absolute;right:0px;top:10px;font-size:13px;line-height:18px;text-align:right;color:#a5a5a5;font-weight:bold; }
+.auth-text a { color:#0b73bc; text-decoration:none; font-size:12px; }
+.auth-text a:hover { color: #0b73bc; }
 
 /* Tabbed panels */
 div#tab_panel {
