--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,7 +121,7 @@ a.button_sign_in,
 div.button_sign_in            { display:block; width:112px; height:35px; background:url(../images/button_sign_in.png); }
 div.button_create_account     { width:140px; height:35px; background:url(../images/button_create_account.png); }
 a.item_remove                 { float:right; display:block; width:16px; height:16px; background:url(../images/button_remove_item.png) no-repeat; }
-a.item_edit                   { float:right; display:block; width:40px; height:24px; background:url(../images/button_edit.png); }
+a.item_edit                   { float:right; display:block; width:18px; height:18px; background:url(../images/button_edit.png) no-repeat; }
 a.button_generic,
 div.button_generic            { float:right; margin:20px 0; width:100px; height:40px; line-height:40px; font-size:16px;
                                 background:#ccc; color:#fff; text-align:center; text-decoration:none; }
@@ -274,6 +274,8 @@ div#cart_container select    { width:200px; }
 
 div#cart_container           { position:relative; top:0px; font-size: 13px; line-height:17px;}
 .cart_row                    { padding:20px 0 0 0; font-size: 13px; }
+
+#attendees                   { font-size:12px; }
 
 
 td#company_info { padding:10px 0px 10px 10px; }
